<resources>
    <string name="app_name">Music Player</string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="setting">Setting</string>
    <string name="local">Local</string>
    <string name="songs">Songs</string>
    <string name="playlists">Playlists</string>
    <string name="artists">Artists</string>
    <string name="all_songs">All songs</string>
    <string name="can_t_fetch_songs_from_internet">Can\'t fetch songs from internet.</string>
    <string name="search">Search</string>
    <string name="hide">Hide</string>
    <string name="hide_songs_confirm">Are you sure you want to hide the songs?</string>
    <string name="add_to">Add to</string>
    <string name="play_next">Play Next</string>
    <string name="playlist_name_already_exists">Playlist name already exists</string>
    <string name="please_select_at_least_one_playlist">Please select at least one playlist</string>
    <string name="songs_2">songs</string>
    <string name="song">song</string>
    <string name="add_to_playlist">Add to playlist</string>
    <string name="new_playlist">New Playlist</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="enter_playlist_name">Enter playlist name</string>
    <string name="song_already_exists_in_playlist">The song already exists in playlist</string>
    <string name="no_playlists_found">No Playlists Found!</string>
    <string name="play">Play</string>
    <string name="add_to_queue">Add to queue</string>
    <string name="delete">Delete</string>
    <string name="delete_playlist">Delete Playlist</string>
    <string name="delete_playlist_message">Are you sure you want to delete the playlist?</string>
    <string name="hide_the_song">Hide the song</string>
    <string name="share">Share</string>
    <string name="no_app_found_to_handle_the_share_action">No app found to handle the share action</string>
    <string name="can_t_download_the_song_to_cache">Can\'t download the song to cache</string>
    <string name="queue">Queue</string>
    <string name="no_song_in_playlist">No song in playlist</string>
    <string name="my_favourite_songs">My favourite songs</string>
    <string name="favourite_song">Favourite Song</string>
    <string name="shuffle">Shuffle</string>
    <string name="no_songs_added_to_favourite">No songs added to favourite</string>
    <string name="no_songs_found">No songs found</string>
    <string name="no_song_to_play">No song to play</string>
    <string name="general">General</string>
    <string name="light_mode">Light mode</string>
    <string name="hidden_songs">Hidden songs</string>
    <string name="add_widget">Add widget</string>
    <string name="ringtone">Ringtone</string>
    <string name="language">Language</string>
    <string name="help">Help</string>
    <string name="rate">Rate</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="please_rate_us">Please rate us</string>
    <string name="not_now">Not now</string>
    <string name="rate_us">Rate us</string>
    <string name="if_you_enjoy_our_music_player_would_you_mind_rating_us_on_the_google_play_then">If you enjoy our Music Player, would you mind rating us on the Google Play, then?</string>
    <string name="your_opinion_matter_to_us">Your Opinion Matter To Us</string>
    <string name="unhide">Unhide</string>
    <string name="you_need_to_select_language">You need to select language</string>
    <string name="next">Next</string>
    <string name="got_it">Got it</string>
    <string name="step_1">Step 1</string>
    <string name="step_2">Step 2</string>
    <string name="step_3">Step 3</string>
    <string name="step_4">Step 4</string>
    <string name="add_widget_guide_description_1">Tap and hold an empty spot on the screen</string>
    <string name="add_widget_guide_description_2">Select widgets</string>
    <string name="add_widget_guide_description_3">Find Music Player</string>
    <string name="add_widget_guide_description_4">Move to the home screen</string>
    <string name="no_artist_found">No artist found</string>
    <string name="sleep_timer">Sleep timer</string>
    <string name="_5_minutes">5 minutes</string>
    <string name="_10_minutes">10 minutes</string>
    <string name="_15_minutes">15 minutes</string>
    <string name="_30_minutes">30 minutes</string>
    <string name="_40_minutes">40 minutes</string>
    <string name="end_of_track">End of track</string>
    <string name="custom">Custom</string>
    <string name="turn_off">Turn off</string>
    <string name="custom_hh_mm">Custom ( hh:mm )</string>
    <string name="please_select_a_time">Please select a time</string>
    <string name="left">Left</string>
    <string name="widget_description">Quick access to your media controls.</string>
    <string name="now_playing">Now Playing</string>
    <string name="delete_from_playlist">Delete from playlist</string>
    <string name="local_audios">Local Audios</string>
    <string name="grant_permission">Grant Permission</string>
    <string name="please_grant_all_permissions">Please grant all permissions to access additional functionality.</string>
    <string name="go_to_setting">Go to setting</string>
    <string name="the_app_needs_permission_to_access_your_storage">The app needs permission to access your storage</string>
    <string name="unknown">Unknown</string>
    <string name="audios">audios</string>
    <string name="audio">audio</string>
</resources>