<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingTop="@dimen/_20sdp">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/favourite_song"
            android:textColor="@color/white"
            android:textSize="@dimen/_18ssp" />

        <ImageView
            android:layout_width="@dimen/_110sdp"
            android:layout_height="@dimen/_110sdp"
            android:layout_marginVertical="@dimen/_20sdp"
            android:src="@drawable/img_folder" />

        <TextView
            android:id="@+id/tv_my_favourite_songs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/my_favourite_songs"
            android:textColor="@color/white"
            android:textSize="@dimen/_15ssp" />

        <TextView
            android:id="@+id/tv_total_songs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4sdp"
            android:fontFamily="@font/nunito_semibold"
            android:text="100 Songs"
            android:textColor="@color/color_A5A7AB"
            android:textSize="@dimen/_12ssp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_37sdp"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_13sdp"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/ll_shuffle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_weight="1"
                android:background="@drawable/bg_bottom_sheet_ok_button"
                android:gravity="center"
                android:paddingHorizontal="@dimen/_13sdp">

                <ImageView
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:src="@drawable/ic_shuffle" />

                <com.kma.musicplayer.ui.customview.MovableText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_7sdp"
                    android:fontFamily="@font/nunito_bold"
                    android:text="@string/shuffle"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_13ssp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_play"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingHorizontal="@dimen/_13sdp">

                <ImageView
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:src="@drawable/ic_play_without_circle" />

                <com.kma.musicplayer.ui.customview.MovableText
                    android:id="@+id/tv_play"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_7sdp"
                    android:fontFamily="@font/nunito_bold"
                    android:text="@string/play"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_13ssp" />

            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginVertical="@dimen/_20sdp"
            android:background="@color/color_4B4F58_50" />

        <TextView
            android:id="@+id/tv_songs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_13sdp"
            android:layout_marginBottom="@dimen/_13sdp"
            android:fontFamily="@font/nunito_semibold"
            android:text="@string/songs"
            android:textColor="@color/white"
            android:textSize="@dimen/_13ssp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="@dimen/_13sdp"
            android:layout_weight="1">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_favourite"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

            <TextView
                android:id="@+id/tv_no_songs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="@font/nunito_medium"
                android:text="@string/no_songs_added_to_favourite"
                android:textColor="@color/color_D2D3D5"
                android:textSize="@dimen/_12ssp"
                android:visibility="gone" />

        </RelativeLayout>

        <FrameLayout
            android:id="@+id/bottom_mini_player"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>
</layout>