<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_bottom_sheet"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="@dimen/_13sdp">

        <ImageView
            android:layout_width="@dimen/_34sdp"
            android:layout_height="@dimen/_3sdp"
            android:background="@drawable/bg_handler_bottomsheet" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/_10sdp"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/add_to_playlist"
            android:textColor="@color/white"
            android:textSize="@dimen/_13ssp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.kma.musicplayer.ui.customview.MovableText
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="@font/nunito_semibold"
                android:text="@string/playlists"
                android:textColor="@color/color_D2D3D5"
                android:textSize="@dimen/_13ssp"
                app:layout_constraintLeft_toLeftOf="parent" />

            <LinearLayout
                android:id="@+id/ll_new_playlist"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                app:layout_constraintRight_toRightOf="parent">

                <ImageView
                    android:layout_width="@dimen/_17sdp"
                    android:layout_height="@dimen/_17sdp"
                    android:src="@drawable/ic_plus_circle" />

                <com.kma.musicplayer.ui.customview.MovableText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_7sdp"
                    android:fontFamily="@font/nunito_semibold"
                    android:text="@string/new_playlist"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12ssp" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_playlist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_13sdp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_17sdp"
            android:layout_marginBottom="@dimen/_7sdp"
            android:orientation="horizontal">

            <RelativeLayout
                android:id="@+id/rl_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_8sdp"
                android:layout_weight="1"
                android:background="@drawable/bg_bottom_sheet_cancel_button"
                android:paddingVertical="@dimen/_8sdp">

                <com.kma.musicplayer.ui.customview.MovableText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:fontFamily="@font/nunito_semibold"
                    android:lineHeight="@dimen/_20ssp"
                    android:text="@string/cancel"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_13ssp" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_save"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/bg_bottom_sheet_ok_button"
                android:paddingVertical="@dimen/_8sdp">

                <com.kma.musicplayer.ui.customview.MovableText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:fontFamily="@font/nunito_semibold"
                    android:lineHeight="@dimen/_20ssp"
                    android:text="@string/ok"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_13ssp" />

            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>
</layout>